# dhms-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README_PRODUCT.md  cli.py  pyproject.toml  requirements.txt
binding/: binding_layer.py  execution_gate.py  metric_lock.py  perturbation_guard.py  regime_validator.py
contract/: DHMS Contract Layer v1.md
dhms_agentfuse/: __init__.py  adapter_skeleton.py  api.py  controlled_proposal_gate.py  inert_mock_executor.py  langchain_agent_loop_boundary.py  langchain_guarded_tool_adapter.py  langchain_interception.py  models.py  pre_execution_gate.py
docs/: adapter_conformance_test_kit_v1.md  agent_adapter_conformance_checklist.md  agent_command_protocol_v1.md  agent_harness_mvp_demo_guide.md  agent_harness_preview_branch_status.md  agent_harness_preview_release_readiness.md  agent_harness_real_validation_log.md  agent_harness_v1_plan.md  agent_suite_runner_v1.md  dhms_agent_proposal_envelope_planning_v1_5_0.md  dhms_agent_runtime_interception_result_review_and_freeze_v0_10_5.md  dhms_agentfuse_bench_sql_v0_6_1.md  dhms_agentfuse_development_roadmap.md  dhms_agentfuse_minimal_api_adapter_skeleton_v0_6_3.md  dhms_agentfuse_naming_and_trademark_alignment_v0_8_8.md  dhms_agentfuse_protocol_examples_v0_7_1.md  dhms_agentfuse_protocol_package_index_v0_7_0.md  dhms_bounded_local_mock_to_real_fixture_validation_result_review_and_freeze_v2_1_4.md  dhms_bounded_local_mock_to_real_inert_proposal_fixtures_v2_1_2.md  dhms_bounded_local_mock_to_real_non_executing_fixture_validation_v2_1_3.md  (+185 more)
(+375 files in other folders)
