[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dhms-agentfuse"
version = "3.5.0"
description = "DHMS AgentFuse local editable package for execution fuse protocol evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Huaxinsheng Zhong" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

[project.urls]
Repository = "https://github.com/MkaliezZ/dhms-engine"

[tool.setuptools.packages.find]
include = ["dhms_agentfuse*"]
